--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title:
+title: "Mi prueba web Jekyll"
 email:
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+baseurl: "/jcdagaa" # the subpath of your site, e.g. /blog/
+url: "https://juandagaa.github.io/jcdagaa" # the base hostname & protocol for your site
 
 twitter_username:
 github_username:
