--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: "Mi prueba web Jekyll"
 email:
 description: > # this means to ignore newlines until "baseurl:"
-baseurl: "/jcdagaa" # the subpath of your site, e.g. /blog/
-url: "https://juandagaa.github.io/jcdagaa" # the base hostname & protocol for your site
+baseurl: "/testjuan" # the subpath of your site, e.g. /blog/
+url: "https://juandagaa.github.io/testjuan" # the base hostname & protocol for your site
 
 twitter_username:
 github_username:
