--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/testjuan" # the subpath of your site, e.g. /blog/
 url: "https://juandagaa.github.io/testjuan" # the base hostname & protocol for your site
 
-twitter_username: juandagaa
+twitter_username: juanito
 github_username: juandagaa
 
 # Build settings
