--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Mi prueba web Jekyll
-email: "juan@dagaa.mx"
+email: juan@dagaa.mx
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/testjuan" # the subpath of your site, e.g. /blog/
 url: "https://juandagaa.github.io/testjuan" # the base hostname & protocol for your site
